# gpt-thinking-extractor

./: .browser-echo-mcp.json  .codefetchignore  .env.example  .geminiignore  .gitignore  Activity Drawer Spec.md  Code Update and Fixes.md  Fix playwright selector bug.md  Gemini-cli extension workflow.md  README.md  Smoke Tests on Saved HTML.md  activity_drawer.html  db-issue-ticket.md  debug_page_dump.html  gpt-scrape-gui.txt  gui-output.md  package.json  pyproject.toml  scrape_thoughts_final.py  scraped_urls.db  scraper_gui.py  strategist_questions.md  the-scrapers-workbench.html
.taskmaster/: state.json
.taskmaster/docs/: PRD.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
codefetch/: src.md
data/693e2b86-5330-8326-aa75-a1cf27552092/: thought_0.txt
data/694740b9-c160-832c-bb1b-899f028ad2c4/: thought_2.json
data/69474446-7c60-8329-b65d-e06d54b0066f/: thought_0.txt  thought_1.txt
data/694969d5-3230-832d-9fd9-945752a56c0b/: thought_0.txt
data/6949ca71-a834-832f-8f55-c6a6183c0e37/: thought_0.txt
docs/gpt5.2_reasoning_dataset/: _AutomatingChatbotThinkingDataScraping.md  withUI_AutomatingChatbotThinkingDataScraping.md
docs/gpt5.2_reasoning_dataset/scratchpad-notes/: project-example-urls.md  scrollable-activity-component.md  (+1 more)
specs/: Activity Drawer Spec.md  Code Update and Fixes.md  Smoke Tests on Saved HTML.md  flashcards.md  strategy-guide.md
src/gpt_thinking_extractor/: scrape_thoughts_final.py  scraper_engine.py  scraper_gui.py  selectors.json
tests/: test_audit.py  test_connection.py  test_engine.py
(+13 files in other folders)
